--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -10,12 +10,14 @@
                 <h2>All Blogs</h2>
                 <% if(blogs.length> 0) {%>
                     <% blogs.forEach(blogs=> { %>
-                        <h3 class="title">
-                            <%= blogs.title %>
-                        </h3>
-                        <p class="snippet">
-                            <%= blogs.snippet %>
-                        </p>
+                        <a class="single" href="/blogs/<%= blogs._id %>">
+                            <h3 class="title">
+                                <%= blogs.title %>
+                            </h3>
+                            <p class="snippet">
+                                <%= blogs.snippet %>
+                            </p>
+                        </a>
                         <% }) %>
                             <% } else { %>
                                 <p>There are no blog to display...</p>
