--- a/server/views/blogs/details.ejs
+++ b/server/views/blogs/details.ejs
@@ -1,9 +1,9 @@
 <html lang="en">
 
-<%- include('./partials/head.ejs') %>
+<%- include('../partials/head.ejs') %>
 
     <body>
-        <%- include('./partials/nav.ejs') %>
+        <%- include('../partials/nav.ejs') %>
 
             <div class="details content">
                 <h2>
@@ -15,10 +15,12 @@
                     </p>
                 </div>
 
-                <a class="delete" data-doc="<% blog._id %>">delete</a>
+                <a class="delete" data-doc="<%= blog._id %>">
+                    <img src="/trashcan.svg" alt="Detete Icons">
+                </a>
             </div>
 
-            <%- include('./partials/footer.ejs') %>
+            <%- include('../partials/footer.ejs') %>
 
                 <script>
                     const trashcan = document.querySelector('a.delete');
@@ -29,7 +31,7 @@
                             method: 'DELETE'
                         })
                             .then((res) => res.json())
-                            .then((data) => console.log(data))
+                            .then((data) => window.location.href = data.redirect)
                             .catch((err) => console.log(err))
                     })
                 </script>
